# kraken

./: .dockerignore  .gitignore  Justfile  README.md  go.work.sum
campaigns/: iot-black-fuzz.yaml  iot-grey-fuzz.yaml  iot-standard.yaml  registry-mqtt.yaml  scenario-a-mqtt.yaml
deploy/: mosquitto.conf
deploy/utils/rogue_mqtt_broker/: rogue_broker.py
docs/: MODULE.md
docs/kraken/: documentation.md  requirements.md
docs/trident/: documentation.md
kraken/: go.mod  go.sum  main.go
kraken/cmd/tui/: main.go
kraken/internal/domain/: campaign.go  finding.go  module.go  policy.go  runner_config.go  scanner_config.go  target.go
kraken/internal/loader/: loader.go  loader_unix.go  loader_windows.go
kraken/internal/protocol/: tags.go
kraken/internal/registry/: client.go  resolver.go  types.go  verify.go
kraken/internal/runner/: policy_integration_test.go  runner.go
kraken/internal/scanner/: factory.go  scanner.go  scanner_test.go
kraken/internal/transport/: conduit.go  conduit_test.go
kraken/internal/tui/: app.go
kraken/testdata/campaigns/: invalid-policy.yaml
modules/protocols/: README.md
modules/protocols/ethercat/abi/: CMakeLists.txt
modules/protocols/mqtt/: extract-seeds.sh
resources/scenario-a/: Dockerfile  README.md  attack-tree.yaml  campaign-fuzz.yaml  campaign.yaml  docker-compose.yaml
resources/scenario-b/: .gitignore  README.md  attack-tree.yaml  campaign.yaml  docker-compose.yaml
resources/scenario-c/: README.md  attack-tree.yaml  campaign.yaml  docker-compose.yaml
trident/: go.mod  go.sum
trident/conduit/: conduit.go
(+1511 files in other folders)
